--- a/css/styles.css
+++ b/css/styles.css
@@ -499,6 +499,76 @@ color: #f4f4fd;
 .tools-icons {
     fill: #f4f4fd;
 }
+.footer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 453px;}
+.footer-bnb {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    text-align: left;
+    margin-bottom: 8px;
+}
+.footer-form-field {
+    display: flex;
+    gap: 16px;    
+}
+.form-label {
+    display: flex;
+    align-items: center;
+}
+.form-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: transparent;
+    color: #ffffff;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 12px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+}
+.form-input:focus {
+    border: 1px solid rgba(255, 255, 255);
+}
+.footer-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    min-width: 165px;
+    height: 40px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4d5ae5;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;    
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button:hover,
+.footer-button:focus {
+    background-color: #404bbf;
+}
+.form-icon {
+    fill: #ffffff;}
 .backdrop{
    position: fixed;
    top: 0;
@@ -538,7 +608,7 @@ opacity: 1;
  .backdrop.is-open .modal{
     opacity: 1;
     transform: translate(-50%,
-        -50%) scale(1.5);
+        -50%);
         transition-delay: 250ms;
 }
 .modal-btn{
