--- a/css/styles.css
+++ b/css/styles.css
@@ -437,12 +437,16 @@ padding: 100px 0;
 color: #f4f4fd;
 }
 .footer-container{
-    display: flex; 
+    display: flex;
+    justify-content: space-between;
     align-items: baseline;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding: 100px 0;
 }
 .footer-logo-slogan{
  max-width: 264px;
- margin-right: 120px;
+ 
 }
 .footer-header-logo {
 display: inline-block;
@@ -501,15 +505,15 @@ color: #f4f4fd;
 }
 .footer-container{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    gap: 24px;
+    width: 453px;
 }
 .footer-form {
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    width: 453px;}
+    gap: 16px;
+}
 .footer-bnb {
     font-weight: 500;
     font-size: 16px;
@@ -521,7 +525,8 @@ color: #f4f4fd;
 }
 .footer-form-field {
     display: flex;
-    gap: 16px;    
+    gap: 16px;
+    
 }
 .form-label {
     display: flex;
@@ -530,19 +535,21 @@ color: #f4f4fd;
 .form-input {
     width: 264px;
     height: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: transparent;
+    font-size: 12px;
     color: #ffffff;
-    line-height: 2;
     letter-spacing: 0.04em;
-    padding-left: 12px;
+    outline: none;
+    padding-left: 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input::placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
 .form-input:focus {
-    border: 1px solid rgba(255, 255, 255);
+border-color: #4d5ae5;
 }
 .footer-button {
     display: flex;
@@ -551,15 +558,10 @@ color: #f4f4fd;
     gap: 16px;
     min-width: 165px;
     height: 40px;
+background-color: #4d5ae5;
+    color: #ffffff;
     border: none;
     border-radius: 4px;
-    background-color: #4d5ae5;
-    color: #ffffff;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;    
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
