--- a/css/styles.css
+++ b/css/styles.css
@@ -433,37 +433,37 @@ border-top: none;
 
 .footer {
     background: #2e2f42;
-padding: 100px 0;
-color: #f4f4fd;
-}
-.footer-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    flex-wrap: wrap;
-    gap: 40px;
     padding: 100px 0;
+    color: #f4f4fd;
 }
-.footer-logo-slogan{
- max-width: 264px;
- 
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
 }
+
+.footer-logo-slogan {
+    max-width: 264px;
+    margin-right: 120px;
+}
+
 .footer-header-logo {
-display: inline-block;
-margin-bottom: 16px;
-font-size: 18px;
+    display: inline-block;
+    margin-bottom: 16px;
+    font-size: 18px;
     font-weight: 800;
     text-decoration: none;
     color: #4d5ae5;
 }
-.footer-header-logo
-.footer-logo-part {
-color: #f4f4fd;
+
+.footer-header-logo .footer-logo-part {
+    color: #f4f4fd;
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
 
 }
+
 .footer-slogan {
     font-weight: 400;
     font-size: 16px;
@@ -473,19 +473,22 @@ color: #f4f4fd;
     max-width: 264px;
     margin-bottom: 16px;
 }
-.social-title{
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--white-color, #ffffff) ;
-        margin-bottom: 16px;      
+
+.social-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--white-color, #ffffff);
+    margin-bottom: 16px;
 }
-.footer-list{
+
+.footer-list {
     display: flex;
     gap: 16px;
 }
-.footer-link{
+
+.footer-link {
     width: 100%;
     height: 100%;
     background-color: #4d5ae5;
@@ -494,15 +497,17 @@ color: #f4f4fd;
     justify-content: center;
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    .footer-link:hover,
-    .footer-link:focus {
-     background-color: #31d0aa;
-    }
+}
+
+.footer-link:hover,
+.footer-link:focus {
+    background-color: #31d0aa;
+}
 
 .tools-icons {
-    fill: #f4f4fd;
-}
+    fill: #f4f4fd;}
+
+
 .footer-container{
     display: flex;
     align-items: center;
@@ -512,6 +517,7 @@ color: #f4f4fd;
 .footer-form {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 16px;
 }
 .footer-bnb {
@@ -525,8 +531,7 @@ color: #f4f4fd;
 }
 .footer-form-field {
     display: flex;
-    gap: 16px;
-    
+    gap: px;    
 }
 .form-label {
     display: flex;
@@ -535,21 +540,19 @@ color: #f4f4fd;
 .form-input {
     width: 264px;
     height: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: transparent;
-    font-size: 12px;
     color: #ffffff;
+    line-height: 2;
     letter-spacing: 0.04em;
-    outline: none;
-    padding-left: 16px;
+    padding-left: 12px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input::placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
 .form-input:focus {
-border-color: #4d5ae5;
+    border: 1px solid rgba(255, 255, 255);
 }
 .footer-button {
     display: flex;
@@ -558,10 +561,15 @@ border-color: #4d5ae5;
     gap: 16px;
     min-width: 165px;
     height: 40px;
-background-color: #4d5ae5;
-    color: #ffffff;
     border: none;
     border-radius: 4px;
+    background-color: #4d5ae5;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;    
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -599,6 +607,7 @@ opacity: 1;
     border-radius: 4px;
     transform: translate(-50%, -50%);
     opacity: 0;
+    background: #fcfcfc;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -633,12 +642,16 @@ opacity: 1;
     }
 .modal-btn:hover,
 .modal-btn:focus {
-  color: #4d5ae5;
-background-color: rgba(77, 90, 229, 0.1);
-}
+background-color: #404BBF;
+    color: #FFFFFF;}
+
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon {
+    stroke: #FFFFFF;}
 
 .modal-btn-icon {
 stroke: currentColor;
+transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-caption {
@@ -670,11 +683,9 @@ display: block;
     width: 100%;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    outline: transparent;
     border-radius: 4px;
     padding-left: 38px;
-    background-color: transparent;
-        outline: transparent;
+    background-color: transparent;    
         color: #2e2f42;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
@@ -703,7 +714,7 @@ display: block;
     font-size: 12px;
     letter-spacing: 0.04em;
 
-    outline: transparent;
+    background: transparent;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     resize: none;
