--- a/css/styles.css
+++ b/css/styles.css
@@ -509,16 +509,20 @@ border-top: none;
 
 
 .footer-container{
-    display: flex;
-    align-items: center;
-    gap: 24px;
-    width: 453px;
+display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+    
 }
 .footer-form {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
+    flex-direction: row;
+    align-items: center;
+    gap: 24px;
 }
 .footer-bnb {
     font-weight: 500;
@@ -531,7 +535,8 @@ border-top: none;
 }
 .footer-form-field {
     display: flex;
-    gap: px;    
+    gap: 24px; 
+    flex-wrap: wrap;
 }
 .form-label {
     display: flex;
@@ -540,19 +545,21 @@ border-top: none;
 .form-input {
     width: 264px;
     height: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: transparent;
     color: #ffffff;
+    font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    padding-left: 12px;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-}
+
 .form-input:focus {
-    border: 1px solid rgba(255, 255, 255);
+    border: 1px solid #ffffff;
+    outline: none;
 }
 .footer-button {
     display: flex;
@@ -589,7 +596,7 @@ background: rgba(46, 47, 66, 0.4);
 opacity: 0;
 visibility: hidden;
 pointer-events: none;
-transition: opaciti 250ms cubic-bezier(0.4, 0, 0.2, 1),
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
 visibiliti 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open{
