--- a/css/styles.css
+++ b/css/styles.css
@@ -510,7 +510,9 @@ border-top: none;
 
 .footer-container{
    align-items: baseline;
-    
+    display: flex;
+        gap: 24px;
+        width: 453px
 }
 .footer-form {
     display: flex;
@@ -524,7 +526,7 @@ border-top: none;
     letter-spacing: 0.02em;
     color: #ffffff;
     text-align: left;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 .footer-form-field {
     display: flex;
@@ -538,14 +540,19 @@ border-top: none;
 .form-input {
     width: 264px;
     height: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: transparent;
+    color: #ffffff;
+    padding-left: 16px;
+    font-size: 12px;
     border: 1px solid #ffffff;
     line-height: 2;
     letter-spacing: 0.04em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.form-input::placeholder {
+    color: rgba(255, 255, 255, 0.6);}
 
 .form-input:focus {
     border: 1px solid #ffffff;
@@ -577,8 +584,10 @@ border-top: none;
 .form-icon {
     margin-left: 16px;
     display: inline-block;
-    vertical-align: middle;}
-    
+    vertical-align: middle;
+    fill: #ffffff;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
 .backdrop{
    position: fixed;
    top: 0;
@@ -633,25 +642,27 @@ opacity: 1;
         justify-content: center;
         padding: 0;
         border-radius: 50%;
-        border: none;
-        background-color: transparent;
-        color: #111111;
-        cursor: pointer;
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-colorr 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    color: #111111;
+    cursor: pointer;
+    transition:
+     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #404BBF;
+border: 1px solid transparent;
     color: #FFFFFF;}
 
 .modal-btn:hover .modal-btn-icon,
 .modal-btn:focus .modal-btn-icon {
-    stroke: #FFFFFF;}
+    fill: #FFFFFF;}
 
 .modal-btn-icon {
-stroke: currentColor;
-transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+fill: currentColor;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-caption {
@@ -660,6 +671,7 @@ transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
+        text-align: center;
         letter-spacing: 0.02em;
         text-transform: none;
             color: #2e2f42;}
@@ -685,13 +697,14 @@ display: block;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding-left: 38px;
-    background-color: transparent;    
+    background-color: transparent;  
+    outline: transparent;
         color: #2e2f42;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
 }
 .modal-form-input:focus{
-    stroke: #4d5ae5;
+border-color: #4D5AE5;
 }
 .modal-form-icon{
     position: absolute;
