--- a/css/styles.css
+++ b/css/styles.css
@@ -516,8 +516,9 @@ border-top: none;
 }
 .footer-form {
     display: flex;
-    align-items: center;
-    gap: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
 }
 .footer-bnb {
     font-weight: 500;
@@ -530,12 +531,14 @@ border-top: none;
 }
 .footer-form-field {
     display: flex;
+    align-items: center;
     gap: 24px; 
     flex-wrap: wrap;
 }
 .form-label {
     display: flex;
     align-items: center;
+    line-height: 1.17;
 }
 .form-input {
     width: 264px;
@@ -599,7 +602,7 @@ opacity: 0;
 visibility: hidden;
 pointer-events: none;
 transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-visibiliti 250ms cubic-bezier(0.4, 0, 0.2, 1);
+visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open{
 opacity: 1;
@@ -607,7 +610,7 @@ opacity: 1;
     pointer-events: auto; 
 }
 .modal{
-    max-width: 408px;
+    width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px;
     position: absolute;
@@ -620,8 +623,8 @@ opacity: 1;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    background: rgb(252, 252, 252);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
        
 }
    
@@ -648,12 +651,13 @@ opacity: 1;
     cursor: pointer;
     transition:
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+outline: none;}
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #404BBF;
-border: 1px solid transparent;
+border-color: transparent;
     color: #FFFFFF;}
 
 .modal-btn:hover .modal-btn-icon,
@@ -677,15 +681,18 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             color: #2e2f42;}
 
 .modal-form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
-
+:root {
+    --label-color: #8e8f99;
+}
 .modal-form-label {
     display: block;
     margin-bottom: 4px;
     font-size: 12px;
         letter-spacing: 0.04em;
-        color: #8e8f99;
+        color: var(--label-color);
+        line-height: 1.17;
 }
 .modal-form-wrapper{
     position: relative;
@@ -709,28 +716,32 @@ border-color: #4D5AE5;
 .modal-form-icon{
     position: absolute;
         top: 50%;
-       margin-left: 16px;
+       left: 16px;
         transform: translateY(-50%);
         stroke: #111111;
-            transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        fill: none;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
             pointer-events: none;
 }
 .modal-form-input:focus+.modal-form-icon {
+    fill: #4D5AE5;
     stroke: #4d5ae5;;
 }
 
 .modal-form-message {
     width: 100%;
     height: 120px;
-    padding: 8px;
-
+    padding: 8px 16px;
+line-height: 1.17;
     font-size: 12px;
     letter-spacing: 0.04em;
-
-    background: transparent;
+color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     resize: none;
+    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -765,14 +776,16 @@ border-color: #4D5AE5;
     margin-right: 8px;
 border-radius: 2px;
     background-color: transparent;
-    
+    fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type='checkbox']:checked+.agreement-wrapper>.agreement-checkbox {
     background-color: #404bbf;
     border: none;
+    fill: var(--white-color, #F4F4FD);
 }
 
 .agreement-checkbox-icon {
