--- a/css/styles.css
+++ b/css/styles.css
@@ -615,9 +615,7 @@ opacity: 1;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-       
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
    
  .backdrop.is-open .modal{
@@ -643,9 +641,8 @@ opacity: 1;
     cursor: pointer;
     transition:
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-outline: none;}
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+border: none;}
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #404BBF;
@@ -673,7 +670,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             color: #2e2f42;}
 
 .modal-form-field {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 :root {
     --label-color: #8e8f99;
@@ -712,8 +709,7 @@ border-color: #4D5AE5;
         transform: translateY(-50%);
         stroke: #111111;
         fill: none;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             pointer-events: none;
 }
 .modal-form-input:focus+.modal-form-icon {
