--- a/css/styles.css
+++ b/css/styles.css
@@ -583,6 +583,7 @@ border-top: none;
     fill: #ffffff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
+    
 .backdrop{
    position: fixed;
    top: 0;
@@ -615,7 +616,6 @@ opacity: 1;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
    
  .backdrop.is-open .modal{
@@ -635,7 +635,6 @@ opacity: 1;
         justify-content: center;
         padding: 0;
         border-radius: 50%;
-      border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #e7e9fc;
     color: #111111;
     cursor: pointer;
@@ -643,6 +642,7 @@ opacity: 1;
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border: none;}
+
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #404BBF;
@@ -672,15 +672,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-form-field {
     margin-bottom: 8px;
 }
-:root {
-    --label-color: #8e8f99;
-}
+
 .modal-form-label {
     display: block;
     margin-bottom: 4px;
     font-size: 12px;
         letter-spacing: 0.04em;
-        color: var(--label-color);
         line-height: 1.17;
 }
 .modal-form-wrapper{
@@ -755,8 +752,6 @@ color: rgba(46, 47, 66, 0.4);
 }
 
 .agreement-checkbox {
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 16px;
@@ -764,7 +759,6 @@ color: rgba(46, 47, 66, 0.4);
     margin-right: 8px;
 border-radius: 2px;
     background-color: transparent;
-    fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -773,7 +767,7 @@ fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 input[type='checkbox']:checked+.agreement-wrapper>.agreement-checkbox {
     background-color: #404bbf;
     border: none;
-    fill: var(--white-color, #F4F4FD);
+    fill:  #F4F4FD;
 }
 
 .agreement-checkbox-icon {
