--- a/css/styles.css
+++ b/css/styles.css
@@ -613,6 +613,7 @@ opacity: 1;
     transform: translate(-50%, -50%);
     opacity: 0;
     background: #fcfcfc;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -670,7 +671,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             color: #2e2f42;}
 
 .modal-form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .modal-form-label {
@@ -679,6 +680,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-size: 12px;
         letter-spacing: 0.04em;
         line-height: 1.17;
+        color: #8e8f99;
 }
 .modal-form-wrapper{
     position: relative;
@@ -711,7 +713,7 @@ border-color: #4D5AE5;
 }
 .modal-form-input:focus+.modal-form-icon {
     fill: #4D5AE5;
-    stroke: #4d5ae5;;
+    stroke: #4d5ae5;
 }
 
 .modal-form-message {
@@ -759,12 +761,14 @@ color: rgba(46, 47, 66, 0.4);
     margin-right: 8px;
 border-radius: 2px;
     background-color: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type='checkbox']:checked+.agreement-wrapper>.agreement-checkbox {
+input[type="checkbox"
+]:checked+.agreement-wrapper>.agreement-checkbox {
     background-color: #404bbf;
     border: none;
     fill:  #F4F4FD;
