--- a/css/styles.css
+++ b/css/styles.css
@@ -613,7 +613,6 @@ opacity: 1;
     transform: translate(-50%, -50%);
     opacity: 0;
     background: #fcfcfc;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -639,6 +638,7 @@ opacity: 1;
     background-color: #e7e9fc;
     color: #111111;
     cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     transition:
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -754,6 +754,7 @@ color: rgba(46, 47, 66, 0.4);
 }
 
 .agreement-checkbox {
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 16px;
@@ -761,10 +762,10 @@ color: rgba(46, 47, 66, 0.4);
     margin-right: 8px;
 border-radius: 2px;
     background-color: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+fill: transparent;
 }
 
 input[type="checkbox"
