--- a/css/styles.css
+++ b/css/styles.css
@@ -616,6 +616,7 @@ opacity: 1;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
     0 1px 3px 0 rgba(0, 0, 0, 0.12), 
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
    
  .backdrop.is-open .modal{
@@ -642,7 +643,7 @@ opacity: 1;
     transition:
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-border: none;}
+}
 
 .modal-btn:hover,
 .modal-btn:focus {
@@ -671,16 +672,20 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             color: #2e2f42;}
 
 .modal-form-field {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
-
+:root {
+    --label-color: #8e8f99;
+    --checked-bg-color: #404bbf;
+    --checked-icon-color: #F4F4FD;
+}
 .modal-form-label {
     display: block;
     margin-bottom: 4px;
     font-size: 12px;
         letter-spacing: 0.04em;
         line-height: 1.17;
-        color: #8e8f99;
+        color: var(--label-color);
 }
 .modal-form-wrapper{
     position: relative;
@@ -762,6 +767,7 @@ color: rgba(46, 47, 66, 0.4);
     margin-right: 8px;
 border-radius: 2px;
     background-color: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -770,9 +776,9 @@ fill: transparent;
 
 input[type="checkbox"
 ]:checked+.agreement-wrapper>.agreement-checkbox {
-    background-color: #404bbf;
+    background-color:var(--checked-bg-color);
     border: none;
-    fill:  #F4F4FD;
+    fill: var(--checked-icon-color);
 }
 
 .agreement-checkbox-icon {
