--- a/css/styles.css
+++ b/css/styles.css
@@ -583,7 +583,11 @@ border-top: none;
     fill: #ffffff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
-    
+        :root {
+            --label-color: #8e8f99;
+            --checked-bg-color: #404bbf;
+            --checked-icon-color: #F4F4FD;
+        }
 .backdrop{
    position: fixed;
    top: 0;
@@ -618,7 +622,6 @@ opacity: 1;
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-   
  .backdrop.is-open .modal{
     opacity: 1;
     transform: translate(-50%,
@@ -644,11 +647,10 @@ opacity: 1;
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #404BBF;
-border-color: transparent;
+border: none;
     color: #FFFFFF;}
 
 .modal-btn:hover .modal-btn-icon,
@@ -659,7 +661,6 @@ border-color: transparent;
 fill: currentColor;
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal-caption {
     max-width: 360px;
     margin-bottom: 16px;
@@ -672,13 +673,9 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
             color: #2e2f42;}
 
 .modal-form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
-:root {
-    --label-color: #8e8f99;
-    --checked-bg-color: #404bbf;
-    --checked-icon-color: #F4F4FD;
-}
+
 .modal-form-label {
     display: block;
     margin-bottom: 4px;
@@ -795,7 +792,6 @@ input[type="checkbox"
         display: block;
         margin: 0 auto;
         padding: 16px 32px;
-        
          min-width: 169px;
         background-color: #4d5ae5;
         color: #fff;
