--- a/css/styles.css
+++ b/css/styles.css
@@ -583,232 +583,234 @@ border-top: none;
     fill: #ffffff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
-        :root {
-            --label-color: #8e8f99;
-            --checked-bg-color: #404bbf;
-            --checked-icon-color: #F4F4FD;
-        }
-.backdrop{
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-background: rgba(46, 47, 66, 0.4);
-opacity: 0;
-visibility: hidden;
-pointer-events: none;
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-open{
-opacity: 1;
+    :root {
+     --label-color: #8e8f99;
+     --checked-bg-color: #404bbf;
+    --checked-icon-color: #F4F4FD;
+    }
+            
+    .backdrop {
+     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+     background: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
+            
+    .backdrop.is-open {
+    opacity: 1;
     visibility: visible;
-    pointer-events: auto; 
-}
-.modal{
-    width: 408px;
+    pointer-events: auto;
+     }
+            
+    .modal {
+     width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px;
     position: absolute;
     top: 50%;
-    left: 50%;
-    border-radius: 4px;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    background: #fcfcfc;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 
-    0 1px 3px 0 rgba(0, 0, 0, 0.12), 
-    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+     left: 50%;
+     border-radius: 4px;
+     background: #fcfcfc;
+     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+     0 1px 3px 0 rgba(0, 0, 0, 0.12),
+     0 2px 1px 0 rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
- .backdrop.is-open .modal{
-    opacity: 1;
+    }
+    .backdrop.is-open .modal {
+     opacity: 1;
     transform: translate(-50%,
-        -50%);
-        transition-delay: 250ms;
-}
-.modal-btn{
-      position: absolute;
-        top: 24px;
-        right: 24px;
-        width: 24px;
-        height: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-        border-radius: 50%;
-    background-color: #e7e9fc;
-    color: #111111;
+    -50%);
+    transition-delay: 250ms;
+     }
+            
+    .modal-btn {
+    position: absolute;
+      top: 24px;
+     right: 24px;
+     width: 24px;
+      height: 24px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     padding: 0;
+     border-radius: 50%;
+     background-color: #e7e9fc;
+     color: #111111;
     cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    transition:
+     border: 1px solid rgba(0, 0, 0, 0.1);
+     transition:
      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-btn:hover,
-.modal-btn:focus {
-background-color: #404BBF;
-border: none;
-    color: #FFFFFF;}
-
-.modal-btn:hover .modal-btn-icon,
-.modal-btn:focus .modal-btn-icon {
-    fill: #FFFFFF;}
-
-.modal-btn-icon {
-fill: currentColor;
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-caption {
-    max-width: 360px;
+     }
+    .modal-btn:hover,
+    .modal-btn:focus {
+    background-color: #404BBF;
+    border: none;
+    color: #FFFFFF;
+    }
+   .modal-btn:hover .modal-btn-icon,
+ .modal-btn:focus .modal-btn-icon {
+     fill: #FFFFFF;
+     }
+            
+    .modal-btn-icon {
+     fill: currentColor;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+            
+   .modal-caption {
+     max-width: 360px;
     margin-bottom: 16px;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        text-align: center;
-        letter-spacing: 0.02em;
-        text-transform: none;
-            color: #2e2f42;}
-
-.modal-form-field {
-    margin-bottom: 16px;
-}
-
-.modal-form-label {
-    display: block;
-    margin-bottom: 4px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+     letter-spacing: 0.02em;
+     text-transform: none;
+      color: #2e2f42;
+     }
+            
+     .modal-form-field {
+     margin-bottom: 8px;
+     }
+    .modal-form-label {
+     display: block;
+     margin-bottom: 4px;
     font-size: 12px;
-        letter-spacing: 0.04em;
-        line-height: 1.17;
-        color: var(--label-color);
-}
-.modal-form-wrapper{
-    position: relative;
-}
-.modal-form-input{
-display: block;
+    letter-spacing: 0.04em;
+    line-height: 1.17;
+    color: var(--label-color);
+     }
+            
+    .modal-form-wrapper {
+     position: relative;
+     }
+           
+    .modal-form-input {
+     display: block;
     width: 100%;
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding-left: 38px;
-    background-color: transparent;  
+     background-color: transparent;
     outline: transparent;
-        color: #2e2f42;
+     color: #2e2f42;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
      
-}
-.modal-form-input:focus{
-border-color: #4D5AE5;
-}
-.modal-form-icon{
-    position: absolute;
-        top: 50%;
-       left: 16px;
-        transform: translateY(-50%);
-        stroke: #111111;
-        fill: none;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            pointer-events: none;
-}
-.modal-form-input:focus+.modal-form-icon {
+    .modal-form-input:focus {
+     border-color: #4D5AE5;
+      }
+    .modal-form-icon {
+     position: absolute;
+     top: 50%;
+     left: 16px;
+    transform: translateY(-50%);
+    stroke: #111111;
+     fill: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+    }
+            
+    .modal-form-input:focus+.modal-form-icon {
     fill: #4D5AE5;
     stroke: #4d5ae5;
-}
-
-.modal-form-message {
-    width: 100%;
+     }
+            
+     .modal-form-message {
+     width: 100%;
     height: 120px;
     padding: 8px 16px;
-line-height: 1.17;
-    font-size: 12px;
+    line-height: 1.17;
+   font-size: 12px;
     letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
+    color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
     border-radius: 4px;
+    margin-bottom: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     resize: none;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-message:focus {
-    border-color: #4d5ae5;;
-}
-
-.modal-form-message::placeholder {
-    color: rgba(46, 47, 66, 0.4);
-}
-.form-agreement {
-    margin-bottom: 24px;
-}
-
-.agreement-wrapper {
-    display: flex;
-        align-items: center;
+     }
+            
+    .modal-form-message:focus {
+     border-color: #4d5ae5;
+    }
+            
+     .modal-form-message::placeholder {
+      color: rgba(46, 47, 66, 0.4);
+     }
+            
+     .form-agreement {
+     margin-bottom: 24px;
+     }           
+     .agreement-wrapper {
+    align-items: center;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: rgba(64, 64, 64, 0.6);
+     color: #8e8f99;
     cursor: pointer
-}
-
+ }
+            
 .agreement-checkbox {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 16px;
-    height: 16px;
-    margin-right: 8px;
+ display: inline-flex;
+ justify-content: center;
+align-items: center;
+width: 16px;
+ height: 16px;
+ margin-right: 8px;
 border-radius: 2px;
-    background-color: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-fill: transparent;
-}
-
-input[type="checkbox"
-]:checked+.agreement-wrapper>.agreement-checkbox {
-    background-color:var(--checked-bg-color);
-    border: none;
-    fill: var(--checked-icon-color);
-}
-
+background-color: transparent;
+ border: 1px solid rgba(46, 47, 66, 0.4);
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+ border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+ fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ fill: transparent;
+ }
+ input[type="checkbox"
+ ]:checked+.agreement-wrapper>.agreement-checkbox {
+ background-color: var(--checked-bg-color);
+border: none;
+ fill: var(--checked-icon-color);
+     }
 .agreement-checkbox-icon {
-    fill: currentColor;
+  fill: currentColor;
 }
-
+            
 .agreement-link {
-    text-decoration-line: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
-    line-height: 1.33;}
-
-    .btn-accent{
-        display: block;
-        margin: 0 auto;
-        padding: 16px 32px;
-         min-width: 169px;
-        background-color: #4d5ae5;
-        color: #fff;
-        border: none;
-         border-radius: 4px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;
-    cursor: pointer;
-    
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .btn-accent:hover,
-    .btn-accent:focus {
-        background-color: #404bbf;
-    }
+text-decoration-line: underline;
+text-decoration-skip-ink: none;
+ color: #4d5ae5;
+line-height: 1.33;
+ }
+ .btn-accent {
+display: block;
+ margin: 0 auto;
+ padding: 16px 32px;
+min-width: 169px;
+ background-color: #4d5ae5;
+color: #fff;
+border: none;
+border-radius: 4px;font-weight: 500;
+font-size: 16px;
+ line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+cursor: pointer;
+            
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-accent:hover,
+.btn-accent:focus {
+background-color: #404bbf;}
