--- a/css/styles.css
+++ b/css/styles.css
@@ -680,6 +680,9 @@ border-top: none;
      .modal-form-field {
      margin-bottom: 8px;
      }
+         .modal-form-field:last-of-type {
+             margin-bottom: 16px;}
+           
     .modal-form-label {
      display: block;
      margin-bottom: 4px;
